--- a/love letter 2.html
+++ b/love letter 2.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Love letter for crush</title>
+    <title>Christmas wish</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
       rel="stylesheet" />
-    <link rel="stylesheet" href="love letter 2.css" />
+    <link rel="stylesheet" href="wish.css" />
   </head>
   <body>
     <!-- tiktok meowish -->
@@ -37,4 +37,5 @@
     <script src="wish.js"></script>
   </body>
 </html>
+
 
