--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="front pocket"></div>
         <div class="letter">
           <div class="words line1">"Dear,</div>
-          <div class="words line2">Marry Christmas to all.</div>
+          <div class="words line2">Happy NewYear</div>
           <div class="words line3">Thank you for being a part of the Encoder AV journey</div>
         </div>
         <div class="hearts">
@@ -37,5 +37,6 @@
     <script src="wish.js"></script>
   </body>
 </html>
+
 
 
